[tool.poetry]
name = "pylint-tutorial"
version = "0.1.0"
description = ""
authors = ["Gonçalo Jardim <goncalo.jardim@daredata.engineering>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.3"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
